--- a/jb-financial-client/package.json
+++ b/jb-financial-client/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.0",
     "reactjs-popup": "^2.0.6",
     "tinymce": "^7.2.1"
