--- a/jb-financial-client/package.json
+++ b/jb-financial-client/package.json
@@ -30,12 +30,14 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-facebook-pixel": "^1.0.4",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.0",
     "reactjs-popup": "^2.0.6",
     "tinymce": "^7.2.1"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
