--- a/jb-financial-client/package.json
+++ b/jb-financial-client/package.json
@@ -31,6 +31,7 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-facebook-pixel": "^1.0.4",
+    "react-gtm-module": "^2.0.11",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.0",
     "reactjs-popup": "^2.0.6",
@@ -40,6 +41,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-gtm-module": "^2.0.4",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
