--- a/jb-financial-client/package.json
+++ b/jb-financial-client/package.json
@@ -24,6 +24,7 @@
     "emailjs-com": "^3.2.0",
     "express": "^4.19.2",
     "flowbite-react": "^0.10.1",
+    "lucide-react": "^0.477.0",
     "mongoose": "^8.5.2",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
